--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "json-loader": "^0.5.7",
     "prettier": "^1.18.2",
     "react-hot-loader": "^4.12.13",
+    "terser-webpack-plugin": "^2.2.1",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
@@ -63,7 +64,6 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.5.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^2.1.0",
     "webpack": "^4.39.1",
     "webpack-bundle-analyzer": "^3.4.1",
