--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "outDir": "ts-build",
     "resolveJsonModule": true,
     "sourceMap": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "strict": true,
     "strictFunctionTypes": false,
     "target": "esnext"
